# HaskellProblems

./: CHANGELOG.md  haskell-problems.cabal
src/: Part1.hs
test/: OneThroughTenSpec.hs
